--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "@frostfall/vide-lib",
+  "name": "frostfall/vide-lib",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "buildPackage": "RobloxDevCli build-package --config=./zap.config",
-    "watch": "rbxtsc -w",
-    "prepublishOnly": "npm run build"
+    "build": ".\\tools\\package_tools.exe copy_dist",
+    "updateBuild": ".\\tools\\package_tools.exe update_dist_package",
+    "watch": "rbxtsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.12.0",
     "@rbxts/compiler-types": "^3.0.0-types.0",
     "@rbxts/types": "^1.0.810",
-    "eslint": "^9.12.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-roblox-ts": "^0.0.36",
     "globals": "^15.11.0",
-    "prettier": "3.3.3",
     "roblox-ts": "^3.0.0",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.10.0"
+    "typescript": "^5.6.2"
   },
   "dependencies": {
     "@rbxts/charm": "^0.8.1",
     "@rbxts/immut": "^0.4.4-ts.0",
     "@rbxts/object-utils": "^1.0.4",
+    "@rbxts/ripple": "^0.9.1",
     "@rbxts/services": "^1.5.5",
     "@rbxts/ui-labs": "^2.3.0",
     "@rbxts/vide": "^0.5.0",
