--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "@rbxts/types": "^1.0.810",
     "globals": "^15.11.0",
     "roblox-ts": "^3.0.0",
-    "typescript": "^5.6.2"
-  },
-  "dependencies": {
+    "typescript": "^5.6.2",
     "@rbxts/charm": "^0.8.1",
     "@rbxts/immut": "^0.4.4-ts.0",
     "@rbxts/object-utils": "^1.0.4",
